Bug: fix scaling on news container tap on iPhone on Safari. Attempt 2: add browser support

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -282,6 +282,10 @@ h1 {
 }
 
 .newsContainer:hover {
+  -ms-transform: scale(1.1, 1.1);
+  -webkit-transform: scale(1.1, 1.1);
+  -moz-transform: scale(1.1, 1.1);
+  -o-transform: scale(1.1, 1.1);
   transform: scale(1.1, 1.1);
 }
 
